[fix] [select] placeholder spacing for options with those variables.

--- a/assets/scss/shared-ui/_select2.scss
+++ b/assets/scss/shared-ui/_select2.scss
@@ -217,6 +217,10 @@
 										display: block;
 									}
 								}
+
+								.select2-selection__placeholder {
+									margin-left: -32px;
+								}
 							}
 						}
 					}
@@ -248,6 +252,10 @@
 									border-style: solid;
 									border-radius: #{$border-radius / 2};
 									transform: translateY(-50%);
+								}
+
+								.select2-selection__placeholder {
+									margin-left: -31px;
 								}
 							}
 						}
